# umundo

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE.md  README.md  appveyor.yml  build-android.sh  build-ios.sh  config.h.in
apps/fileserver/: CMakeLists.txt  umundo-fileclient.cpp  umundo-fileserver.cpp
apps/fileserver/gnuplot/: nbandlayout.plot  pressure.plot
apps/fileserver/test/: CMakeLists.txt  test-directory-monitoring.cpp  test-sequence-prediction.cpp  test-structured-cache.cpp
apps/fileserver/test/traces/: timed_trace1.txt
apps/fileserver/umundo/cache/: CacheProfiler.cpp  CacheProfiler.h  NBandCache.cpp  NBandCache.h  RandomCache.cpp  RandomCache.h  StructuredCache.cpp  StructuredCache.h
apps/fileserver/umundo/filesystem/: DirectoryListingClient.cpp  DirectoryListingClient.h  DirectoryListingService.cpp  DirectoryListingService.h  DirectoryListingService.proto
apps/fileserver/umundo/prediction/: AFxL.cpp  AFxL.h  SPA.cpp  SPA.h
apps/tools/: CMakeLists.txt  umundo-bridge.cpp  umundo-capture.cpp  umundo-debug.cpp  umundo-echo-service.cpp  umundo-kinect-pub.cpp  umundo-kinect-sub.cpp  umundo-monitor.cpp  umundo-multicast-phone-pub.cpp  umundo-multicast-phone-sub.cpp  umundo-phone-pub.cpp  umundo-phone-sub.cpp  umundo-phone.cpp  umundo-ping.cpp  umundo-pingpong.cpp  umundo-pong.cpp  umundo-replay.cpp  umundo-rtp-pub.cpp  umundo-rtp-sub.cpp  umundo-rtppingpong.cpp  umundo-stream-receive.cpp  umundo-stream-send.cpp  umundo-throughput.cpp
apps/tracking/opencv/: ArucoPosePublisher.cpp  ArucoPosePublisher.h  CMakeLists.txt  isight.yml  main.cpp
contrib/patches/bonjour-333.10/: CMakeLists.txt  mDNSResponder-333.10.reuseport.patch
contrib/patches/bonjour-333.10/mDNSCore/: mDNSEmbeddedAPI.h
contrib/patches/bonjour-333.10/mDNSPosix/: mDNSPosix.c
contrib/patches/bonjour-333.10/mDNSShared/: PlatformCommon.c  dns_sd.h  dnssd_clientshim.c  dnssd_ipc.h  uds_daemon.h
contrib/patches/bonjour-333.10/mDNSWindows/: mDNSWin32.c
contrib/patches/libre/: CMakeLists.txt  unistd.h
core/: CMakeLists.txt
core/bindings/: CMakeLists.txt
core/bindings/swig/: umundo_beautify.i  umundo_ignores.i
core/bindings/swig/csharp/: CMakeLists.txt  umundocore.i
core/bindings/swig/java/: CMakeLists.txt  autoloadJNI.i  umundocore.i
core/bindings/swig/perl/: CMakeLists.txt  umundocore.i
core/bindings/swig/php/: CMakeLists.txt  umundocore.i
core/bindings/swig/python/: CMakeLists.txt  umundocore.i
core/bindings/umundo-objc/: core.h
core/bindings/umundo-objc/core/: UMDiscovery.h  UMNode.h  UMNode.mm  UMPublisher.h  UMPublisher.mm  UMSubscriber.h  UMSubscriber.mm
core/src/umundo/: core.h  version.h
core/src/umundo/common/: Common.h  Debug.cpp  Debug.h  EndPoint.h  Factory.cpp  Factory.h  Host.cpp  Host.h  Implementation.h  Message.h  Regex.cpp  Regex.h  ResultSet.h  UUID.cpp  UUID.h  portability.cpp  portability.h
core/src/umundo/connection/: Node.cpp  Node.h  NodeStub.h  Publisher.cpp  Publisher.h  PublisherStub.h  Subscriber.cpp  Subscriber.h  SubscriberStub.h
core/src/umundo/discovery/: BroadcastDiscovery.cpp  BroadcastDiscovery.h  Discovery.cpp  Discovery.h  MDNSDiscovery.cpp  MDNSDiscovery.h  NodeQuery.cpp  NodeQuery.h
core/src/umundo/thread/: Thread.cpp  Thread.h  tinythread.cpp  tinythread.h
core/test/: CMakeLists.txt  test-avahi-stress.cpp  test-discovery.cpp  test-domains.cpp  test-greeter.cpp  test-message-transmission.cpp  test-rtp-pubsub.cpp  test-stack-api.cpp  test-stress.cpp  test-threads.cpp  test-zeromq-client.cpp  test-zeromq-disconnect.cpp  test-zeromq-layout.cpp  test-zeromq-nodecomm.cpp  test-zeromq-server.cpp
core/test/discovery/: CMakeLists.txt  test-discovery.cpp  test-domains.cpp
core/test/thread/: CMakeLists.txt  test-threads.cpp
core/test/transmission/: CMakeLists.txt  test-message-transmission.cpp
core/tools/: CMakeLists.txt  umundo-monitor.cpp  umundo-pingpong.cpp
docs/: BUILDING.md  (+4 more)
examples/cpp/rpc/chat/: CMakeLists.txt
rpc/: CMakeLists.txt  README.md
rpc/src/umundo/: rpc.h
rpc/src/umundo/protoc-rpc/: ServiceGeneratorCPP.cpp  ServiceGeneratorCPP.h  ServiceGeneratorJava.cpp  ServiceGeneratorJava.h
rpc/test/: CMakeLists.txt
rpc/test/services/: test-api.cpp  test-rpc-client.cpp  test-rpc-server.cpp
s11n/: CMakeLists.txt  README.md
s11n/interfaces/protobuf/: Pose.proto
s11n/src/umundo/: s11n.h
s11n/src/umundo-csharp/: GreeterDecorator.cs  ITypedGreeter.cs  ITypedReceiver.cs  TypedPublisher.cs  TypedSubscriber.cs
s11n/src/umundo-objc/: s11n.h
s11n/src/umundo-python/: umundo.py  umundoS11n.py
s11n/test/: CMakeLists.txt  test-api.cpp
s11n/test/java/: build.xml
s11n/test/proto/: Test1.proto
src/umundo/util/: Base64.cpp  Base64.h  CMakeLists.txt  Regex.h
tests/: CMakeLists.txt  test-avahi-stress.cpp  test-discovery.cpp  test-domains.cpp  test-greeter.cpp  test-lz4-dict.cpp  test-message-transmission.cpp  test-rtp-pubsub.cpp  test-stack-api.cpp  test-stress.cpp  test-threads.cpp  test-zeromq-disconnect.cpp  test-zeromq-nodecomm.cpp
tests/core/: CMakeLists.txt  test-discovery.cpp  test-domains.cpp  test-greeter.cpp  test-message-transmission.cpp  test-rtp-pubsub.cpp  test-stack-api.cpp  test-stress.cpp  test-threads.cpp  test-zeromq-disconnect.cpp  test-zeromq-nodecomm.cpp
tests/core/java/: .classpath  RPCClient.java.foo
tests/java/: .project
tests/rpc/: CMakeLists.txt  test-api.cpp  test-rpc-client.cpp  test-rpc-server.cpp
tests/s11n/: test-api.mm
tests/s11n/java/: .classpath  .project
tests/scripts/: run_header_compiles.cmake
tools/: CMakeLists.txt  umundo-bridge.cpp  umundo-capture.cpp  umundo-debug.cpp  umundo-echo-service.cpp  umundo-kinect-pub.cpp  umundo-kinect-sub.cpp  umundo-monitor.cpp  umundo-multicast-phone-pub.cpp  umundo-multicast-phone-sub.cpp  umundo-phone.cpp  umundo-pingpong.cpp  umundo-replay.cpp  umundo-rtp-pub.cpp  umundo-rtp-sub.cpp  umundo-stream-receive.cpp  umundo-stream-send.cpp  umundo-throughput.cpp
tools/protoc-rpc/: ServiceGeneratorCPP.cpp  ServiceGeneratorJava.cpp  ServiceGeneratorJava.h
util/: CMakeLists.txt
util/src/umundo/: util.h
(+589 files in other folders)
